--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "8.2.4",
     "rxjs": "6.4.0",
     "tslib": "1.10.0",
+    "url-resolve-browser": "^1.1.0",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
