--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rxjs": "6.4.0",
     "tslib": "1.10.0",
     "url-resolve-browser": "^1.1.0",
+    "uuid": "^3.3.3",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
