--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "8.2.4",
     "@angular/platform-browser-dynamic": "8.2.4",
     "@angular/router": "8.2.4",
+    "nzh": "^1.0.4",
     "rxjs": "6.4.0",
     "tslib": "1.10.0",
     "url-resolve-browser": "^1.1.0",
