--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
+/release/app
+/release/dist
+/release/node_modules
 /tmp
 /out-tsc
+
 # Only exists if Bazel was run
 /bazel-out
 
